--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "landing-page-arcana",
+  "name": "arcana",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:landing-page-arcana": "node dist/landing-page-arcana/server/server.mjs"
+    "serve:ssr:Arcana": "node dist/arcana/server/server.mjs"
   },
   "private": true,
   "dependencies": {
@@ -21,8 +21,12 @@
     "@angular/platform-server": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.8",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@tailwindcss/postcss": "^4.1.10",
     "express": "^4.18.2",
+    "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.1.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
