build: move well-known files to src directory
Simplify asset configuration by consolidating well-known files under src/.well-known instead of public/.well-known

--- a/angular.json
+++ b/angular.json
@@ -29,16 +29,10 @@
               "src/favicon.ico",
               "src/assets",
               "src/_redirects",
-              "public/.well-known/apple-app-site-association",
               {
-                "glob": "apple-app-site-association",
-                "input": "public/.well-known/apple-app-site-association",
-                "output": "/"
-              },
-              {
-                "glob": "assetlinks.json",
-                "input": "public/.well-known/assetlinks.json",
-                "output": "/"
+                "glob": "**/*",
+                "input": "src/.well-known",
+                "output": "/.well-known"
               }
             ],
             "styles": [
