Made changes for deep linking and web->app associations.

--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
               "src/_redirects",
               {
                 "glob": "**/*",
-                "input": "src/.well-known",
+                "input": "public/.well-known",
                 "output": "/.well-known"
               }
             ],
