--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.8",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@supabase/supabase-js": "^2.75.0",
     "@tailwindcss/postcss": "^4.1.10",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
